[package]
name = "Day27"
version = "0.1.0"
authors = ["Tanish2002 <tanishkhare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "question1"
path = "src/question1.rs"
test = false
bench = false

[[bin]]
name = "question2"
path = "src/question2.rs"
test = false
bench = false

[dependencies]
text_io = "0.1.8"
substring = "1.4.5"
